feat(Main.html, Main.css): add basic design

--- a/Main.html
+++ b/Main.html
@@ -1,13 +1,24 @@
 <html>
 
 <head>
-    <title>Exrc1</title>
     <link rel="stylesheet" type="text/css" href="./Main.css">
 </head>
 
 <body>
-    <div>
-        hello world
+    <div id="introduction">
+        שלום פלוני אלמוני
+    </div>
+
+    <div id="details">
+        <div id="all-details">
+            <h1 id="all-details-header"> כל הפריטים:</h1>
+            <p id="detail">פריט 1</p>
+        </div>
+
+        <div id="specific-details">
+            <h1>פרטים ספציפיים:</h1>
+            <p>שם פריט, שם פריט</p>
+        </div>
     </div>
 </body>
 
