feat(Main.html, Main.css): advanced page

--- a/Main.html
+++ b/Main.html
@@ -5,19 +5,49 @@
 </head>
 
 <body>
-    <div id="introduction">
-        שלום פלוני אלמוני
-    </div>
-
-    <div id="details">
-        <div id="all-details">
-            <h1 id="all-details-header"> כל הפריטים:</h1>
-            <p id="detail">פריט 1</p>
+    <div id="page">
+        <div id="introduction" class="row">
+            שלום פלוני אלמוני
         </div>
 
-        <div id="specific-details">
-            <h1>פרטים ספציפיים:</h1>
-            <p>שם פריט, שם פריט</p>
+        <div id="content" class="row">
+            <div class="column" id="details">
+                <div id="all-details">
+                    <h1 class="details-header"> כל הפריטים:</h1>
+                    <ul>
+                        <li class="detail">פריט 1</li>
+                        <li class="detail">פריט 2</li>
+                        <li class="detail">פריט 3</il>
+                        <li class="detail">פריט 4</il>
+                        <li class="detail">פריט 5</li>
+                    </ul>
+                </div>
+
+                <div id="specific-details">
+                    <h1 class="details-header">פרטים ספציפיים:</h1>
+                    <p id="specific-details-name">שם פריט, שם פריט, שם פריט, שם פריט</p>
+                </div>
+            </div>
+
+            <div class="column" id="buttons">
+                <ul>
+                    <a href="" class="button-link">
+                        <li class="button">כפתור 1</li>
+                    </a>
+                    <a href="" class="button-link">
+                        <li class="button">כפתור 2</li>
+                    </a>
+                    <a href="" class="button-link">
+                        <li class="button">כפתור 3</li>
+                    </a>
+                    <a href="" class="button-link">
+                        <li class="button">כפתור 4</li>
+                    </a>
+                    <a href="" class="button-link">
+                        <li class="button">כפתור 5</li>
+                    </a>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
