fix(Main.html, Main.css): fix buttons

--- a/Main.html
+++ b/Main.html
@@ -7,7 +7,12 @@
 <body>
     <div id="page">
         <div id="introduction" class="row">
-            שלום פלוני אלמוני
+            <p id="name-introduction"> שלום פלוני אלמוני </p>
+        <div id="images">
+            <img src="./images/oreflogo.png" width="30vw" height="30vw" alt="">
+            <img src="./images/maoflogo.png" width="42vw" height="30vw" alt="">
+        </div>
+
         </div>
 
         <div id="content" class="row">
@@ -30,23 +35,22 @@
             </div>
 
             <div class="column" id="buttons">
-                <ul>
-                    <a href="" class="button-link">
-                        <li class="button">כפתור 1</li>
-                    </a>
-                    <a href="" class="button-link">
-                        <li class="button">כפתור 2</li>
-                    </a>
-                    <a href="" class="button-link">
-                        <li class="button">כפתור 3</li>
-                    </a>
-                    <a href="" class="button-link">
-                        <li class="button">כפתור 4</li>
-                    </a>
-                    <a href="" class="button-link">
-                        <li class="button">כפתור 5</li>
-                    </a>
-                </ul>
+                <a href="" class="button-link">
+                    <button>כפתור 1</button>
+                </a>
+                <a href="" class="button-link">
+                    <button>כפתור 2</button>
+                </a>
+                <a href="" class="button-link">
+                    <button>כפתור 3</button>
+                </a>
+                <a href="" class="button-link">
+                    <button>כפתור 4</button>
+                </a>
+                <a href="" class="button-link">
+                    <button>כפתור 5</button>
+                </a>
+
             </div>
         </div>
     </div>
