--- a/Exercise1/Main.html
+++ b/Exercise1/Main.html
@@ -1,24 +1,21 @@
-<html>
-
+<html dir="rtl">
 <head>
     <link rel="stylesheet" type="text/css" href="./Main.css">
 </head>
-
 <body>
-    <div id="page">
-        <div id="introduction" class="row">
-            <p id="name-introduction"> שלום פלוני אלמוני </p>
-        <div id="images">
-            <img src="./images/oreflogo.png" width="32vw" height="32vw" alt="">
-            <img src="./images/maoflogo.png" width="45vw" height="32vw" alt="">
+    <div class="page">
+        <div class="introduction row">
+            <p class="nameIntroduction"> שלום פלוני אלמוני </p>
+            <div class="images">
+                <img src="./images/orefLogo.png" width="32vw" height="32vw" alt="">
+                <img src="./images/maofLogo.png" width="45vw" height="32vw" alt="">
+            </div>
         </div>
 
-        </div>
-
-        <div id="content" class="row">
-            <div class="column" id="details">
-                <div id="all-details">
-                    <h1 class="details-header"> כל הפריטים:</h1>
+        <div class="content row">
+            <div class="details column">
+                <div class="allDetails">
+                    <h1 class="detailsHeader"> כל הפריטים:</h1>
                     <ul>
                         <li class="detail">פריט 1</li>
                         <li class="detail">פריט 2</li>
@@ -28,32 +25,20 @@
                     </ul>
                 </div>
 
-                <div id="specific-details">
-                    <h1 class="details-header">פרטים ספציפיים:</h1>
-                    <p id="specific-details-name">שם פריט, שם פריט, שם פריט, שם פריט</p>
+                <div class="specificDetails">
+                    <h1 class="detailsHeader">פרטים ספציפיים:</h1>
+                    <p class="specificDetailsName">שם פריט, שם פריט, שם פריט, שם פריט</p>
                 </div>
             </div>
 
-            <div class="column" id="buttons">
-                <a href="" class="button-link">
-                    <button>כפתור 1</button>
-                </a>
-                <a href="" class="button-link">
-                    <button>כפתור 2</button>
-                </a>
-                <a href="" class="button-link">
-                    <button>כפתור 3</button>
-                </a>
-                <a href="" class="button-link">
-                    <button>כפתור 4</button>
-                </a>
-                <a href="" class="button-link">
-                    <button>כפתור 5</button>
-                </a>
-
+            <div class="sideBar column">
+                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 1</button></a>
+                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 2</button></a>
+                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 3</button></a>
+                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 4</button></a>
+                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 5</button></a>
             </div>
         </div>
     </div>
 </body>
-
 </html>
