--- a/Exercise2/Main.html
+++ b/Exercise2/Main.html
@@ -1,5 +1,6 @@
 <html dir="rtl">
 <head>
+    <title>Exercise2</title>
     <link rel="stylesheet" type="text/css" href="./Main.css">
     <script src="./Main.js"></script>
 </head>
@@ -7,12 +8,10 @@
     <div class="page">
         <div class="introduction row">
             <p class="nameIntroduction"> שלום פלוני אלמוני </p>
-            
             <div class="clock">
                 <p class="clockText"></p>
                 <button class="clockButton" onclick="clockHandle()">התחל</button>
             </div>
-            
             <div class="images">
                 <img class="introductionLogo" src="./images/orefLogo.png" width="32vw" height="32vw" alt="">
                 <img class="introductionLogo" src="./images/maofLogo.png" width="45vw" height="32vw" alt="">
