feat(Main.html, Main.css, Main.js): Add jsons

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -1,9 +1,10 @@
 <html dir="rtl">
 <head>
-    <title>Exercise2</title>
+    <title>Exercise3</title>
     <link rel="icon" href="./images/maofLogo.png">
     <link rel="stylesheet" type="text/css" href="./Main.css">
     <script src="./Main.js"></script>
+    <script src="../jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <div class="page">
@@ -21,23 +22,19 @@
 
         <div class="content row">
             <div class="sideBar column">
-                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 1</button></a>
-                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 2</button></a>
-                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 3</button></a>
-                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 4</button></a>
-                <a href="" class="sideBarLink"><button class="sideBarButton">כפתור 5</button></a>
+                <button class="sideBarButton">חיות</button>
+                <button class="sideBarButton">חיה חדשה</button>
+                <button class="sideBarButton">ביבי</button>
+                <button class="sideBarButton">בוגי</button>
+                <button class="sideBarButton">בוז'י</button>
             </div>
 
             <div class="details column">
                 <div class="allDetails">
                     <h1 class="detailsHeader"> כל הפריטים:</h1>
-                    <ul>
-                        <li class="detail">פריט 1</li>
-                        <li class="detail">פריט 2</li>
-                        <li class="detail">פריט 3</il>
-                        <li class="detail">פריט 4</il>
-                        <li class="detail">פריט 5</li>
-                    </ul>
+                    <table>
+                        <tr></tr>
+                    </table>
                 </div>
 
                 <div class="specificDetails">
