feat(Main.html, Main.css, Main.js): Add table

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -1,4 +1,5 @@
 <html dir="rtl">
+
 <head>
     <title>Exercise3</title>
     <link rel="icon" href="./images/maofLogo.png">
@@ -6,6 +7,7 @@
     <script src="./Main.js"></script>
     <script src="../jquery-3.5.1.min.js"></script>
 </head>
+
 <body>
     <div class="page">
         <div class="introduction row">
@@ -32,8 +34,14 @@
             <div class="details column">
                 <div class="allDetails">
                     <h1 class="detailsHeader"> כל הפריטים:</h1>
-                    <table>
-                        <tr></tr>
+                    <table class="animalTable">
+                        <tr class="animalTableRow animalTableHeader">
+                            <th class="animalTableProperty">מספר חיה</th>
+                            <th class="animalTableProperty">שם החיה</th>
+                            <th class="animalTableProperty">כלוב</th>
+                            <th class="animalTableProperty">מספר הרגליים</th>
+                            <th class="animalTableProperty">הסר</th>
+                        </tr>
                     </table>
                 </div>
 
@@ -45,4 +53,5 @@
         </div>
     </div>
 </body>
+
 </html>
