--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -1,5 +1,4 @@
 <html dir="rtl">
-
 <head>
     <title>Exercise3</title>
     <link rel="icon" href="./images/maofLogo.png">
@@ -7,7 +6,6 @@
     <script src="./Main.js"></script>
     <script src="../jquery-3.5.1.min.js"></script>
 </head>
-
 <body>
     <div class="page">
         <div class="introduction row">
@@ -34,15 +32,20 @@
             <div class="details column">
                 <div class="allDetails">
                     <h1 class="detailsHeader"> כל הפריטים:</h1>
-                    <table class="animalTable">
-                        <tr class="animalTableRow animalTableHeader">
-                            <th class="animalTableProperty">מספר חיה</th>
-                            <th class="animalTableProperty">שם החיה</th>
-                            <th class="animalTableProperty">כלוב</th>
-                            <th class="animalTableProperty">מספר הרגליים</th>
-                            <th class="animalTableProperty">הסר</th>
-                        </tr>
-                    </table>
+
+                    <div class="detailsHeaderBox">
+                        <table class="animalTable">
+                            <tr class="animalTableRow animalTableHeader">
+                                <th class="animalTableProperty">מספר חיה</th>
+                                <th class="animalTableProperty">שם החיה</th>
+                                <th class="animalTableProperty">כלוב</th>
+                                <th class="animalTableProperty">מספר הרגליים</th>
+                                <th class="animalTableProperty"></th>
+                            </tr>
+                        </table>
+
+                        <button class="saveAnimalButton" disabled>שמור</button>
+                    </div>
                 </div>
 
                 <div class="specificDetails">
@@ -53,5 +56,4 @@
         </div>
     </div>
 </body>
-
 </html>
