feat(Main.html, Main.css, Main.js): Design Table

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -35,12 +35,12 @@
 
                     <div class="detailsHeaderBox">
                         <table class="animalTable">
-                            <tr class="animalTableRow animalTableHeader">
+                            <tr class="animalTableHeader">
                                 <th class="animalTableProperty">מספר חיה</th>
                                 <th class="animalTableProperty">שם החיה</th>
                                 <th class="animalTableProperty">כלוב</th>
                                 <th class="animalTableProperty">מספר הרגליים</th>
-                                <th class="animalTableProperty"></th>
+                                <th></th>
                             </tr>
                         </table>
 
