feat(Main.html, Main.css, Main.js): Add row selection

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -29,18 +29,16 @@
                 <button class="sideBarButton">בוז'י</button>
             </div>
 
-            <div class="details column">
-                <div class="allDetails">
-                    <h1 class="detailsHeader"> כל הפריטים:</h1>
-
-                    <div class="detailsHeaderBox">
+            <div class="detailsScreen column currentScreen">
+                <div class="allDetailsScreen">
+                    <div class="AnimalsTableScreen">
                         <table class="animalTable">
                             <tr class="animalTableHeader">
                                 <th class="animalTableProperty">מספר חיה</th>
                                 <th class="animalTableProperty">שם החיה</th>
                                 <th class="animalTableProperty">כלוב</th>
                                 <th class="animalTableProperty">מספר הרגליים</th>
-                                <th></th>
+                                <th class="garbageEmptyTableHeader"></th>
                             </tr>
                         </table>
 
