fix(Main.html, Main.css, Main.js): Bug fix

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -24,7 +24,7 @@
 
         <div class="content row">
             <div class="sideBar column">
-                <button class="sideBarButton" rel='AnimalsScreen'>חיות</button>
+                <button class="sideBarButton" rel='animalsScreen'>חיות</button>
                 <button class="sideBarButton" rel='newAnimalScreen'>חיה חדשה</button>
                 <button class="sideBarButton" rel='detailsScreen3'>ביבי</button>
                 <button class="sideBarButton" rel='detailsScreen4'>בוגי</button>
@@ -33,7 +33,7 @@
 
             <div class="detailsScreen column currentScreen">
                 <div class="allDetailsScreen">
-                    <div class="AnimalsScreen hidden">
+                    <div class="animalsScreen hidden">
                         <table class="animalTable"></table>
 
                         <button class="saveAnimalButton" disabled>שמור</button>
