fix(Main.html, Main.css, Main.js): Minor fixes

--- a/Exercise3/Main.html
+++ b/Exercise3/Main.html
@@ -31,7 +31,7 @@
                 <button class="sideBarButton" rel='detailsScreen5'>בוז'י</button>
             </div>
 
-            <div class="detailsScreen column currentScreen">
+            <div class="detailsScreen column">
                 <div class="allDetailsScreen">
                     <div class="animalsScreen hidden">
                         <table class="animalTable"></table>
