--- a/Basic HTML/Exercise3/Main.html
+++ b/Basic HTML/Exercise3/Main.html
@@ -22,8 +22,8 @@
 
         <div class="content row">
             <div class="sideBar column">
-                <button class="sideBarButton" rel='animalsScreen'>חיות</button>
-                <button class="sideBarButton" rel='newAnimalScreen'>חיה חדשה</button>
+                <button class="sideBarButton animalsScreenButton" rel='animalsScreen'>חיות</button>
+                <button class="sideBarButton"  rel='newAnimalScreen'>חיה חדשה</button>
                 <button class="sideBarButton" rel='detailsScreen3'>ביבי</button>
                 <button class="sideBarButton" rel='detailsScreen4'>בוגי</button>
                 <button class="sideBarButton" rel='detailsScreen5'>בוז'י</button>
